fix(database): close review findings batches 1-5